# ParODE

./: .gitignore  CMakeLists.txt  README
Include/: AdamsMoulton.h  BTimesUAdamsMoulton.h  BTimesURK4thOrder.h  DebugUtilities.h  DistributeA.h  FTypeDef.h  GPUFixedStepIterative.h  GPUManagement.h  GPUODESolver.h  KernelWrapper.h  LeftLeafCopyKernelScanUpsweep.h  MMKernelScanDownsweep.h  MMKernelScanUpsweep.h  MVVKernelScanDownsweep.h  MVVKernelScanUpsweep.h  ParODE.h  ParODECInterface.h  ParODECppInterface.h  ParODEEnums.h  ParODEException.h  ParODETypeDefs.h  RootCopyKernelScanDownsweep.h  RungeKutta4thOrder.h  SystemOutput.h
Kernels/: BTimesUAdamsMoulton.cl  BTimesURK4thOrder.cl  DistributeA.cl  LeftLeafCopyKernelScanUpsweep.cl  MMKernel.cl  MMKernelScanDownsweep.cl  MMKernelScanUpsweep.cl  MVVKernel.cl  MVVKernelScanDownsweep.cl  MVVKernelScanUpsweep.cl  RootCopyKernelScanDownsweep.cl  SystemOutput.cl  u.cl
PythonInterface/: ParODESetup.py  ParODEmodule.c  TestPythonBasicFunctions.py  TestPythonODESolvers.py
SciLabInterface/: LoadParODELibrary.sci  ParODEInterfaceStubs.sci  TestABM.sce  TestParODELibDriver.sce  TestQueryGPUDevices.sce  TestRK4.sce  UnloadParODE.sci
Sources/: AdamsMoulton.cpp  BTimesUAdamsMoulton.cpp  BTimesURK4thOrder.cpp  DebugUtilities.cpp  DistributeA.cpp  GPUFixedStepIterative.cpp  GPUManagement.cpp  GPUODESolver.cpp  KernelWrapper.cpp  LeftLeafCopyKernelScanUpsweep.cpp  MMKernelScanDownsweep.cpp  MMKernelScanUpsweep.cpp  MVVKernelScanDownsweep.cpp  MVVKernelScanUpsweep.cpp  ParODE.cpp  ParODEException.cpp  ParODEException.h  RootCopyKernelScanDownsweep.cpp  RungeKutta4thOrder.cpp  SystemOutput.cpp
TestsSources/: TestAdamsMoulton.cpp  TestParODEInterface.cpp  TestParODEStaticLibCInterface.cpp  TestRungeKutta4thOrder.cpp
